--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install CocoaPods
-      run: cd mobywatel.zip && pod install
+      run:  pod install
     - name: Build mobywatel Archive
       run: xcodebuild -workspace Mobywatel/Mobywatel.xcworkspace -scheme Mobywatel -sdk iphoneos -configuration Release -archivePath build.xcarchive archive CODE_SIGNING_ALLOWED=NO
     - name: Export Mobywatel IPA
